Add Gunicorn to requirements
Add gunicorn to requirements.txt and update deployment-related settings and example env/configs.

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ GEMINI_API_KEY='your-google-ai-gemini-api-key'
 # ---  External Service API Keys ---
 FINNHUB_API_KEY='your-free-finnhub-api-key'
 ALPHA_VANTAGE_API_KEY='your-free-alpha-vantage-api-key'
+
+
+# # --- News API Keys ---
+# FINNHUB_API_KEY=d434mh1r01qvk0ja61egd434mh1r01qvk0ja61f0          -------3333333333
+# ALPHA_VANTAGE_API_KEY=X6OP62MPZ921W5TD                               ------------------4444444444444
