--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ venv.bak/
 # Django
 # ==============================================================================
 *.log
+logs
+django.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
