feat(agent): Implement core agent logic and reactive task
This commit introduces the "brain" of the Forex Compass agent, responsible for responding to user queries.

It includes:
- **`tools.py`**: Defines two primary tools for the agent: `knowledge_base_search` (for RAG via pgvector) and `get_latest_market_news` (for retrieving pre-processed news from the database).

- **`agent.py`**: Implements the agent's core persona and reasoning capabilities using LangChain. It creates an OpenAI Tools Agent that is equipped with the defined tools and a robust system prompt for safety and accuracy.

- **`tasks.py` (On-Demand Task)**: Creates the `process_user_query` Celery task. This task orchestrates the entire reactive flow: checking the Redis cache, invoking the agent executor if a cache miss occurs, saving the conversation history, caching the new result, and sending the final A2A response to the Telex webhook.

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,12 @@ httpx             # Modern, async-first HTTP client
 openai              # For embeddings and/or chat models
 google-generativeai # For using the Gemini API
 
+
+# --- AI & Language Models ---
+langchain               #   Core Library that provides the framework for creating agents, defining prompts, and managing tool execution (AgentExecutor).
+langchain-openai        # For OpenAI models, including ChatOpenAI (for the LLM)
+
+
 # --- Web Scraping ---
 beautifulsoup4
 requests          # A fallback/synchronous HTTP client
