feat(agent): Implement final agent logic and reactive task
This commit introduces the complete "brain" of the Forex Compass agent, responsible for responding to user queries, and fixes a critical LangChain import error.

- **Refactors Imports:** Corrects the import paths for `AgentExecutor` and `create_openai_tools_agent` to align with the latest versions of the `langchain` library, resolving the `ImportError`.

- **Implements `tools.py`:** Defines `knowledge_base_search` (for RAG) and `get_latest_market_news` as LangChain tools.

- **Implements `agent.py`:** Creates the agent's core persona and reasoning process using `create_openai_tools_agent`. It dynamically loads conversation history to provide context.

- **Finalizes `process_user_query` Task:** The on-demand Celery task is now complete. It orchestrates the entire reactive flow: checking Redis cache, invoking the agent, saving history, caching the result, and sending the A2A response to the Telex webhook.

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-generativeai # For using the Gemini API
 # --- AI & Language Models ---
 langchain               #   Core Library that provides the framework for creating agents, defining prompts, and managing tool execution (AgentExecutor).
 langchain-openai        # For OpenAI models, including ChatOpenAI (for the LLM)
+langchain-core
 
 
 # --- Web Scraping ---
@@ -34,6 +35,7 @@ requests          # A fallback/synchronous HTTP client
 # --- Environment & Utilities ---
 environs
 python-decouple     # For cleanly managing .env variables
+python-dotenv
 
 
 # --- Other Third Part-Packages  ---
