CORRECTED THE CORRECT IMPORT PART FOR : "task": "core.tasks.keep_service_awake",

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,19 @@ staticfiles/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+
+
+
+
+env/
+.idea/
+__pycache__/
+__pycache__
+*.py[cod]
+*$py.class
+.vscode/
+.DS_Store  
+.AppleDouble  
+.LSOverride
+.env
