--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,4 +4,4 @@
 cmds = ["python manage.py collectstatic --noinput --clear"]
 
 [start]
-cmd = "python manage.py migrate && python manage.py createsu && gunicorn core.wsgi:application --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 60 --log-level info"
+cmd = "python manage.py migrate && python manage.py createsu && gunicorn core.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --worker-class gevent --threads 2 --timeout 120 --log-level info"
