--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,82 @@ __pycache__
 .AppleDouble  
 .LSOverride
 .env
+
+
+
+
+
+
+
+
+
+
+env/
+.idea/
+__pycache__/
+*.py[cod]
+*$py.class
+.vscode/
+.DS_Store
+.AppleDouble
+.LSOverride
+.env
+db.sqlite3
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.vscode/*
+.idea/*
+node_modules/*
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+.DS_Store
+.AppleDouble
+.LSOverride
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+db.sqlite3
+db.sqlite3-journal
+*.log
+*.mo
+*.pot
+celerybeat-schedule
+celerybeat.pid
+env/
+.env
